--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     }
 
     body {
-      background-color: #000; /* Fondo negro */
+      background-color: #000;
       color: #fff;
       padding: 2rem;
     }
@@ -25,7 +25,7 @@
 
     h1 {
       text-align: center;
-      color: #4B0082; /* Violeta oscuro */
+      color: #4B0082;
       margin-bottom: 2rem;
       font-size: 2.5em;
       text-transform: uppercase;
@@ -39,14 +39,13 @@
     }
 
     .movie-card {
-      background: #1a1a1a; /* Tonos oscuros para la tarjeta */
+      background: #1a1a1a;
       border-radius: 12px;
       overflow: hidden;
       border: 1px solid #4B0082;
       box-shadow: 0 4px 12px rgba(75, 0, 130, 0.5);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       cursor: pointer;
-      padding: 1.5rem;
       text-align: center;
     }
 
@@ -55,20 +54,27 @@
       box-shadow: 0 6px 16px rgba(75, 0, 130, 0.7);
     }
 
+    .movie-cover {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+
     .movie-title {
       font-size: 1.2em;
       color: #fff;
-      margin-bottom: 0.5rem;
+      margin: 0.8rem 0 0.5rem;
     }
 
     .movie-genre {
       color: #bbb;
       font-size: 0.95em;
+      margin-bottom: 1rem;
     }
 
     /* Estilos para el reproductor */
     .player-section {
-      display: none; /* Oculta el reproductor inicialmente */
+      display: none;
       flex-direction: column;
       align-items: center;
       justify-content: center;
@@ -106,7 +112,6 @@
       align-items: center;
       transition: background 0.3s ease;
       color: white;
-      font-family: Arial, sans-serif;
       gap: 4px;
     }
 
@@ -153,6 +158,7 @@
     const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTlIMeGgNv9yl2mVwPngNUFmsDTKkwzBQXbomWz9Xll-ZVRSkDvDIGmaCmIlcK32y4Krkf_N9gryp9W/pub?output=csv';
     const PLAYER_BASE_URL = 'https://zplayer.io/?v=';
 
+    // Función que carga las películas desde el CSV de Google Sheets
     async function loadMovies() {
       try {
         const response = await fetch(SHEET_URL);
@@ -165,15 +171,38 @@
 
         movies.forEach(movie => {
           if (!movie.ID || !movie.TITULO) return;
-          
+
           const card = document.createElement('div');
           card.className = 'movie-card';
-          card.innerHTML = `
-            <h3 class="movie-title">${movie.TITULO}</h3>
-            ${movie.GENERO ? `<p class="movie-genre">${movie.GENERO}</p>` : ''}
-          `;
 
-          // Al hacer clic, se muestra el reproductor con la película seleccionada
+          // Crear el elemento de imagen para la portada
+          const img = document.createElement('img');
+          img.className = 'movie-cover';
+          img.alt = `Portada de ${movie.TITULO}`;
+          // Imagen por defecto mientras se carga la portada
+          img.src = 'https://via.placeholder.com/280x200?text=Sin+portada';
+
+          // Consultar la portada automáticamente usando OMDb API
+          getPoster(movie.TITULO).then(posterUrl => {
+            img.src = posterUrl;
+          });
+
+          card.appendChild(img);
+
+          // Agregar título y género
+          const titleElement = document.createElement('h3');
+          titleElement.className = 'movie-title';
+          titleElement.innerText = movie.TITULO;
+          card.appendChild(titleElement);
+
+          if (movie.GENERO) {
+            const genreElement = document.createElement('p');
+            genreElement.className = 'movie-genre';
+            genreElement.innerText = movie.GENERO;
+            card.appendChild(genreElement);
+          }
+
+          // Al hacer clic se muestra el reproductor con la película seleccionada
           card.addEventListener('click', () => {
             showPlayer(movie.TITULO, movie.ID);
           });
@@ -187,6 +216,7 @@
       }
     }
 
+    // Función que convierte el CSV a JSON
     function csvToJson(csv) {
       const lines = csv.split('\n').filter(line => line.trim() !== '');
       const headers = lines[0].split(',').map(h => h.trim().toUpperCase());
@@ -200,6 +230,29 @@
       });
     }
 
+    // Función que consulta la portada de la película usando OMDb API
+    async function getPoster(title) {
+  const apiKey = '115b9aa888deb4d8277641eb93d9beb0'; // Reemplaza 'TU_API_KEY_TMDB' por tu API key real de TMDb
+  try {
+    // Realiza una búsqueda de la película en TMDb
+    const response = await fetch(`https://api.themoviedb.org/3/search/movie?api_key=${apiKey}&query=${encodeURIComponent(title)}`);
+    const data = await response.json();
+    if (data.results && data.results.length > 0) {
+      const posterPath = data.results[0].poster_path;
+      if (posterPath) {
+        // Devuelve la URL completa de la imagen (usando la base de imágenes de TMDb)
+        return `https://image.tmdb.org/t/p/w500${posterPath}`;
+      }
+    }
+    // Si no se encontró o no tiene poster, retorna una imagen placeholder
+    return 'https://via.placeholder.com/280x200?text=Sin+portada';
+  } catch (error) {
+    return 'https://via.placeholder.com/280x200?text=Sin+portada';
+  }
+}
+
+
+    // Función para mostrar el reproductor con la película seleccionada
     function showPlayer(title, id) {
       document.getElementById('movie-title').innerText = title;
       document.getElementById('videoFrame').src = `${PLAYER_BASE_URL}${encodeURIComponent(id.trim())}`;
@@ -207,8 +260,8 @@
       document.getElementById('player-section').style.display = 'flex';
     }
 
+    // Función para volver al catálogo y reiniciar el iframe
     function showCatalog() {
-      // Reiniciar el iframe para que el video anterior se detenga y se cargue de nuevo al seleccionar otra película
       document.getElementById('videoFrame').src = "";
       document.getElementById('catalog-section').style.display = 'block';
       document.getElementById('player-section').style.display = 'none';
@@ -216,6 +269,5 @@
 
     loadMovies();
   </script>
-
 </body>
 </html>
