--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
             card.appendChild(genreElement);
           }
 
+          if (movie.AÑO) {
+            const yearElement = document.createElement('p');
+            yearElement.className = 'movie-year';
+            yearElement.innerText = movie.AÑO;
+            card.appendChild(yearElement);
+          }
+
           // Al hacer clic se muestra el reproductor con la película seleccionada
           card.addEventListener('click', () => {
             showPlayer(movie.TITULO, movie.ID);
