--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
   <!-- Sección de Catálogo -->
   <div class="container" id="catalog-section">
     <h1>Catálogo de Películas</h1>
+    <div class="search-bar">
+      <input type="text" id="searchInput" placeholder="Buscar películas...">
+    </div>
     <div class="movie-grid" id="movieContainer">
       <div class="loading">Cargando películas...</div>
     </div>
