--- a/index.html
+++ b/index.html
@@ -122,13 +122,39 @@
       transform: scale(1.03);
     }
 
+    .movie-info {
+      padding: 0 15px 15px;
+    }
+
     .movie-title {
       font-size: 1.1rem;
       color: var(--text-light);
-      margin: 1.2rem 0;
-      padding: 0 15px;
+      margin: 1.2rem 0 0.5rem;
       font-weight: 600;
       letter-spacing: 0.5px;
+    }
+
+    .movie-details {
+      color: var(--text-muted);
+      font-size: 0.9rem;
+      margin-top: 0.5rem;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .movie-year {
+      background: rgba(123, 44, 191, 0.2);
+      padding: 3px 8px;
+      border-radius: 12px;
+    }
+
+    .movie-genre {
+      background: rgba(123, 44, 191, 0.1);
+      padding: 3px 8px;
+      border-radius: 12px;
+      font-style: italic;
     }
 
     .search-bar {
@@ -295,7 +321,6 @@
   </div>
 
   <script>
-    // (El código JavaScript permanece igual que en la versión anterior)
     const SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTlIMeGgNv9yl2mVwPngNUFmsDTKkwzBQXbomWz9Xll-ZVRSkDvDIGmaCmIlcK32y4Krkf_N9gryp9W/pub?output=csv';
     const PLAYER_BASE_URL = 'https://zplayer.io/?v=';
 
@@ -333,10 +358,34 @@
 
           card.appendChild(img);
 
+          const infoContainer = document.createElement('div');
+          infoContainer.className = 'movie-info';
+
           const titleElement = document.createElement('h3');
           titleElement.className = 'movie-title';
           titleElement.innerText = item.TITULO;
-          card.appendChild(titleElement);
+          infoContainer.appendChild(titleElement);
+
+          // Agregar año y género si existen
+          const detailsContainer = document.createElement('div');
+          detailsContainer.className = 'movie-details';
+
+          if (item.AÑO) {
+            const yearElement = document.createElement('span');
+            yearElement.className = 'movie-year';
+            yearElement.innerText = item.AÑO;
+            detailsContainer.appendChild(yearElement);
+          }
+
+          if (item.GENERO) {
+            const genreElement = document.createElement('span');
+            genreElement.className = 'movie-genre';
+            genreElement.innerText = item.GENERO;
+            detailsContainer.appendChild(genreElement);
+          }
+
+          infoContainer.appendChild(detailsContainer);
+          card.appendChild(infoContainer);
 
           card.addEventListener('click', () => {
             showPlayer(item.TITULO, item.ID);
